fix playlist title alignment and margin bottom

--- a/spotify/assets/style.css
+++ b/spotify/assets/style.css
@@ -194,6 +194,9 @@ h3{
 .content .playlist{
     max-width: calc((100% - 5rem) / 6);
     flex: 0 1 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .content .image,
@@ -245,7 +248,7 @@ h3{
 }
 
 .content .playlist .title{
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
 }
 
 .content .artist{
